<resources>
    <string name="server_events_error">Can\'t load events</string>
    <string name="server_events_success">Events loaded</string>
    <string name="paginationPreferences">Pagination</string>
    <string name="label_dialog">Pagination</string>
    <string name="label_type_your_pagination">type your paginationPreferences</string>
    <string name="label_submit">Submit</string>
    <string name="label_cancel">Cancel</string>
    <string name="links">Links</string>
    <string name="none">none</string>
    <string name="img_error">image</string>
    <string name="menu_search">search</string>
    <string name="menu_settings">settings</string>
    <string name="menu_navigation">navigation</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feed">Feed</string>
    <string name="title_profile">Profile</string>
    <string name="app_name">MVPProject</string>
    <string name="btn">Next</string>
    <string name="btn_main">back to main</string>
    <string name="title_fragments">Destin</string>
    <string name="first_fr">First</string>
    <string name="second_fr">Second</string>
    <string name="third_fr">Third</string>
    <string name="fourth_fr">Fourth</string>
    <string name="fifth_fr">Fifth</string>
    <string name="sixth_fr">Sixth</string>
    <string name="seventh_fr">Seventh</string>
</resources>
