<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <ImageView
                android:id="@+id/iv_reddit"
                android:layout_width="66dp"
                android:layout_height="76dp"
                app:srcCompat="@drawable/reddit"
                android:layout_marginTop="72dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/img_error"/>
        <ImageView
                android:id="@+id/iv_article"
                android:layout_width="66dp"
                android:layout_height="76dp"
                app:srcCompat="@drawable/article"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_reddit"
                app:layout_constraintEnd_toEndOf="@+id/iv_reddit"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:contentDescription="@string/img_error"/>
        <ImageView
                android:id="@+id/iv_wiki"
                android:layout_width="66dp"
                android:layout_height="76dp"
                app:srcCompat="@drawable/wiki"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_article"
                app:layout_constraintEnd_toEndOf="@+id/iv_reddit"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:contentDescription="@string/img_error"/>
        <TextView
                android:id="@+id/tv_links_links_activity"
                android:text="@string/links"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="160dp"/>
        <TextView
                android:id="@+id/tv_link_reddit"
                android:text="@string/none"
                android:textSize="20sp"
                android:textStyle="bold"
                android:autoLink="web"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_links_links_activity"
                app:layout_constraintStart_toEndOf="@+id/iv_reddit"
                android:layout_marginStart="28dp"/>
        <TextView
                android:id="@+id/tv_link_article"
                android:text="@string/none"
                android:textSize="20sp"
                android:textStyle="bold"
                android:autoLink="web"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_links_links_activity"
                app:layout_constraintStart_toEndOf="@+id/iv_article"
                android:layout_marginStart="28dp"/>
        <TextView
                android:id="@+id/tv_link_wiki"
                android:text="@string/none"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:autoLink="web"
                app:layout_constraintTop_toBottomOf="@+id/tv_links_links_activity"
                app:layout_constraintStart_toEndOf="@+id/iv_wiki"
                android:layout_marginStart="28dp"/>
    </android.support.constraint.ConstraintLayout>

    <ProgressBar
            android:id="@+id/links_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
</FrameLayout>